@@ -30,6 +30,7 @@ New user-visible features
 Bugs fixed
 ----------
 - (wifi) #467 - WiFi: Failed association process
+- (wifi) #468 - WiFi: Wrong txDuration for trigger frame
 
 Release 3.35
 ============
